--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse"
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="/index.html">Home</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Inicio</a></li>
                 </ul>
             </div>
         </div>
@@ -174,7 +174,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pikaday/1.6.1/pikaday.min.js"></script>
-    <script src="/assets/js/script.min.js"></script>
+    <script src="assets/js/script.min.js"></script>
 </body>
 
 </html>
