--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse"
                 id="navbarNav">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Inicio</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="index.html">Home</a></li>
                 </ul>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 <div class="avatar" style="background-image: url(&quot;assets/img/perfil%20maibot.jpg&quot;);"></div>
                 <div class="about-me">
                     <p>Hola! I mi nombre es <strong>Mai</strong>. fui creada como un <strong>Bot multiproposito</strong> para hacer mas amena tu estadia en los servidores de Discord, tengo un sistema de <strong>Perfiles propio</strong>, <strong>Alertas de Streaming en Twitch</strong>,
-                        <strong>Frases Aleatorias de Anime</strong> y mas...</p><a class="btn btn-outline-primary" role="button" href="https://discordapp.com/api/oauth2/authorize?client_id=655827490656485397&permissions=8&scope=bot">Invitame!</a></div>
+                        <strong>Frases Aleatorias de Anime</strong> y mas...</p><a class="btn btn-outline-primary" role="button" href="https://discordapp.com/api/oauth2/authorize?client_id=655827490656485397&amp;permissions=8&amp;scope=bot">Invitame!</a></div>
             </div>
         </section>
         <section class="portfolio-block skills">
@@ -109,6 +109,15 @@
                 <div class="col-sm-6 col-md-4 item"><i class="fab fa-twitch icon" style="color: rgb(255,255,255);"></i>
                     <h3 class="name" style="height: 24px;">¡twitch &lt;usuario&gt; &lt;*mensaje&gt;<br></h3>
                     <p class="description">Remplaza &lt;usuario&gt; por un usuario de twitch y &nbsp;&lt;*mensaje&gt; por el mensaje que quieres mostrar cuando haga stream &nbsp; &nbsp; PD: el mensaje puede contener espacios</p>
+                    <p class="description" style="color: #ffffff;font-weight: bold;font-style: normal;">Limite Streamers: 1 , para aumentar la cantidad se debe solicitar</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item"><i class="fab fa-twitch icon" style="color: rgb(255,255,255);"></i>
+                    <h3 class="name" style="height: 24px;">¡twitch delete &lt;usuario&gt;<br></h3>
+                    <p class="description">Remplaza &lt;usuario&gt; por el usuario de twitch que desees eliminar de las Alertas</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item"><i class="fa fa-twitch icon" style="color: #ffffff;"></i>
+                    <h3 class="name">¡twitch resetbot</h3>
+                    <p class="description">Elimina el canal para anunciar cuando el Streamer este Online</p>
                 </div>
             </div>
         </div>
@@ -151,7 +160,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Utilidad</h2>
-                <p class="text-center">Modulo de Utilidad</p>
+                <p class="text-center">Modulo de Utilidad/Son insuficientes para tener una categoria</p>
             </div>
             <div class="row features">
                 <div class="col-sm-6 col-md-4 item"><i class="fas fa-folder icon" style="color: #ffffff;"></i>
@@ -161,6 +170,14 @@
                 <div class="col-sm-6 col-md-4 item"><i class="fas fa-quote-left icon" style="color: rgb(255,255,255);"></i>
                     <h3 class="name" style="height: 24px;"><strong>¡quote</strong><br></h3>
                     <p class="description">Obtienes una frase aleatoria de Anime con su respecto autor y titulo</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item"><i class="fas fa-shopping-cart icon" style="color: rgb(255,255,255);"></i>
+                    <h3 class="name" style="height: 24px;"><strong>¡tienda</strong><br></h3>
+                    <p class="description">Actualmente solo es posible Comprar Titulos para tu perfil</p>
+                </div>
+                <div class="col-sm-6 col-md-4 item"><i class="fas fa-coins icon" style="color: rgb(255,255,255);"></i>
+                    <h3 class="name" style="height: 24px;"><strong>¡daily</strong><br></h3>
+                    <p class="description">Obten Maicoins para usar en la tienda</p>
                 </div>
             </div>
         </div>
