--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-sm-6 col-md-4 item"><i class="fas fa-quote-left icon" style="color: rgb(255,255,255);"></i>
                     <h3 class="name" style="height: 24px;"><strong>¡quote</strong><br></h3>
-                    <p class="description">Obtienes una frase aleatoria de Anime con su respecto autor y titulo</p>
+                    <p class="description">Obtienes una frase aleatoria de Anime con su respectivo autor y titulo</p>
                 </div>
                 <div class="col-sm-6 col-md-4 item"><i class="fas fa-shopping-cart icon" style="color: rgb(255,255,255);"></i>
                     <h3 class="name" style="height: 24px;"><strong>¡tienda</strong><br></h3>
